Fix spacing on card title

--- a/gatsby-theme/src/styles/card.scss
+++ b/gatsby-theme/src/styles/card.scss
@@ -81,6 +81,7 @@
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            margin-bottom: 10px;
         }
 
         p {
